Pagina donazioni tooltip

--- a/donations.html
+++ b/donations.html
@@ -30,10 +30,10 @@
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarsExample09">
+        <div class="collapse navbar-collapse">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" style="cursor:pointer;" data-toggle="tooltip" data-placement="top"
+                    <a class="nav-link" style="cursor:pointer;" href="gangskins.html" data-toggle="tooltip" data-placement="top"
                        title="Informazioni sulle skin per le gang"> <i class="fas fa-male"></i> Skin Gang</a>
                 </li>
                 <li class="nav-item">
@@ -41,11 +41,12 @@
                        title="Torna al forum"> <i class="fas fa-external-link-alt"></i> Torna al forum</a>
                 </li>
             </ul>
+            <!--<a><span><i class="far fa-calendar-alt"></i> Pagamenti una <a style="cursor: pointer" href="https://it.wikipedia.org/wiki/Una_tantum">Tantum</a></span></a>-->
         </div>
     </nav>
 
     <main role="main">
-        <div class="row">
+        <!--<div class="row">
             <div class="col">
                 <ul class="nav nav-pills nav-fill">
                     <li class="nav-item">
@@ -57,7 +58,7 @@
                 </ul>
             </div>
         </div>
-        <br>
+        <br>-->
         <div class="row">
             <div class="col">
                 <div class="card">
@@ -97,6 +98,7 @@
                         <li class="list-group-item">Firma nei post</li>
                         <li class="list-group-item">Skin in game <i title="Visualizza le skin sbloccate"
                                                                     class="fas fa-images"></i></li>
+                        <li class="list-group-item">Targa personalizzata <i class="fas fa-id-badge"></i></li>
                     </ul>
                     <div class="card-body centered">
                         <a href="#" class="card-link donate-link" data-toggle="modal" data-target="#makeDonation">Dona
@@ -118,9 +120,11 @@
                                                                    class="fas fa-envelope"></i> - 750MB <i
                                 title="Spazio allegati ed immagini" class="fas fa-images"></i></li>
                         <li class="list-group-item">Firma nei post</li>
+                        <li class="list-group-item">Foto personalizzata sul documento in-game</li>
                         <li class="list-group-item">Skin in game <i title="Visualizza le skin sbloccate"
                                                                     class="fas fa-images"></i></li>
                         <li class="list-group-item">Targa personalizzata <i class="fas fa-id-badge"></i></li>
+                        <li class="list-group-item">Stanza su Teamspeak</li>
                     </ul>
                     <div class="card-body centered">
                         <a href="#" class="card-link donate-link" data-toggle="modal" data-target="#makeDonation">Dona
@@ -142,12 +146,14 @@
                                                                     class="fas fa-envelope"></i> - 1GB <i
                                 title="Spazio allegati ed immagini" class="fas fa-images"></i></li>
                         <li class="list-group-item">Firma nei post</li>
+                        <li class="list-group-item">Foto personalizzata sul documento in-game</li>
                         <li class="list-group-item">Skin in game <i title="Visualizza le skin sbloccate"
                                                                     class="fas fa-images"></i></li>
                         <li class="list-group-item" title="Trofeo sul forum">Investitore <i class="fas fa-trophy"></i>
                         </li>
                         <li class="list-group-item">Targa personalizzata <i class="fas fa-id-badge"></i></li>
                         <li class="list-group-item">Titolo personalizzato sul forum</li>
+                        <li class="list-group-item">Stanza su Teamspeak</li>
                     </ul>
                     <div class="card-body centered">
                         <a href="#" class="card-link donate-link" data-toggle="modal" data-target="#makeDonation">Dona
