--- a/gangskins.html
+++ b/gangskins.html
@@ -2,9 +2,161 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>ALIR - Skin gang</title>
+    <!-- Required meta tags -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="ALIR Database Viewer">
+    <meta name="keywords" content="Altis, Italia, ALIR, alir, db">
+    <meta name="author" content="Andreacw">
+    <!-- Page favicon -->
+    <link rel="icon" href="https://i.imgur.com/SSdiFqD.png" type="image/gif"/>
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
+          integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+    <!-- Other CSS -->
+    <link href="css/donations.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+
 </head>
 <body>
+
+<div class="container" id="maindiv">
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" style="font-size: 150%;"><i class="fas fa-heart"></i> <b
+                style="color: #007BCC">ALIR</b>Donations</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample09"
+                aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" style="cursor:pointer;" href="donations.html" data-toggle="tooltip" data-placement="top"
+                       title="Informazioni sulle donazioni"> <i class="fas fa-euro-sign"></i> Donazioni</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://www.alir.eu/" data-toggle="tooltip" data-placement="top"
+                       title="Torna al forum"> <i class="fas fa-external-link-alt"></i> Torna al forum</a>
+                </li>
+            </ul>
+            <a><span style="font-size: larger"><i class="fas fa-users"></i> Skin gang</span></a>
+        </div>
+    </nav>
+
+    <main role="main">
+        <div class="row">
+            <div class="col">
+                <div class="card">
+                    <div class="card-body vehicle">
+                        <h3 class="price">5 €<small style="font-size: large">/mese</small></h3>
+                        <p class="name">Pack Veicolo</p>
+                    </div>
+                    <ul class="list-group list-group-flush centered features">
+                        <li class="list-group-item">Badge sul Forum/Teamspeak 3</li>
+                    </ul>
+                    <div class="card-body centered">
+                        <a href="#" class="card-link donate-link" data-toggle="modal" data-target="#makeDonation">Dona
+                            ora!</a>
+                    </div>
+                </div>
+                <div class="padonphone"></div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <div class="card-body heli">
+                        <h3 class="price">5 €<small style="font-size: large">/mese</small></h3>
+                        <p class="name">Pack Elicottero</p>
+                    </div>
+                    <ul class="list-group list-group-flush centered features">
+                        <li class="list-group-item">Badge sul Forum/Teamspeak 3</li>
+                    </ul>
+                    <div class="card-body centered">
+                        <a href="#" class="card-link donate-link" data-toggle="modal" data-target="#makeDonation">Dona
+                            ora!</a>
+                    </div>
+                </div>
+                <div class="padonphone"></div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <div class="card-body outfits">
+                        <h3 class="price">5 €<small style="font-size: large">/mese</small></h3>
+                        <p class="name">Pack Vestito</p>
+                    </div>
+                    <ul class="list-group list-group-flush centered features">
+                        <li class="list-group-item">Badge sul Forum/Teamspeak 3</li>
+                    </ul>
+                    <div class="card-body centered">
+                        <a href="#" class="card-link donate-link" data-toggle="modal" data-target="#makeDonation">Dona
+                            ora!</a>
+                    </div>
+                </div>
+                <span class="tip">* Il più scelto!</span>
+                <div class="padonphone"></div>
+            </div>
+        </div>
+        <br>
+        <br>
+        <div class="row">
+            <div class="col">
+                <div class="card">
+                    <div class="card-body allpack">
+                        <h3 class="price"><del style="color: #BE3A32">15 €<small style="font-size: large">/mese</small></del> 12 €<small style="font-size: large">/mese</small></h3>
+                        <p class="name">Tutti i pacchetti</p>
+                    </div>
+                    <ul class="list-group list-group-flush centered features">
+                        <li class="list-group-item">Badge sul Forum/Teamspeak 3</li>
+                    </ul>
+                    <div class="card-body centered">
+                        <a href="#" class="card-link donate-link" data-toggle="modal" data-target="#makeDonation">Dona
+                            ora!</a>
+                    </div>
+                </div>
+                <span class="tip">* Il più economico!</span>
+                <div class="padonphone"></div>
+            </div>
+        </div>
+    </main>
+
+    <br>
+    <nav aria-label="breadcrumb" role="navigation" class="pagec">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item active" aria-current="page">
+              <span>Made by <a
+                      href="https://www.alir.eu/profile/3-andreacw/" data-toggle="tooltip" data-placement="top"
+                      title="Visualizza il profilo di Andreacw">Andreacw</a></span> - Under <a data-toggle="tooltip" data-placement="top"
+                                                                                               title="Visualizza la licenza su GitHub" href="https://github.com/andreacw5/ALIRDonations/blob/master/LICENSE">MIT</a> License - Made for <a
+                    href="https://www.alir.eu/"
+                    data-toggle="tooltip"
+                    data-placement="top"
+                    title="Vai al sito internet (alir.eu)">ALIR</a> - <i
+                    class="fab fa-github"></i> <a data-toggle="tooltip" data-placement="top"
+                                                  title="Visualizza su GitHub"
+                                                  href="https://github.com/andreacw5/ALIRDonations"> GitHub</a>
+            </li>
+        </ol>
+    </nav>
+
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"
+        integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
+        crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"
+        integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
+        crossorigin="anonymous"></script>
+<script defer src="https://alir.eu/etero/js/fontawesome5.min.js"></script>
+<!--<script src="https://cdnjs.cat.net/ajax/libs/defiant.js/1.2.6/defiant.js"></script>-->
+
+<script type="text/javascript">
+    // Abilito i tooltip ovunque
+    $(function () {
+        $('[data-toggle="tooltip"]').tooltip();
+    });
+</script>
 
 </body>
 </html>
