--- a/donations.html
+++ b/donations.html
@@ -81,8 +81,7 @@
                     </div>
                 </div>
                 <span class="tip">* Il più scelto!</span>
-                <br>
-                <br>
+                <div class="padonphone"></div>
             </div>
             <div class="col">
                 <div class="card">
