Updated gang page

--- a/donations.html
+++ b/donations.html
@@ -164,6 +164,9 @@
         </div>
     </main>
 
+    <span class="tip">* Con qualsiasi livello sarà possibile accedere ad ALIR:DB!</span>
+    <div class="padonphone"></div>
+
     <nav aria-label="breadcrumb" role="navigation" class="pagec">
         <ol class="breadcrumb">
             <li class="breadcrumb-item active" aria-current="page">
