--- a/gangskins.html
+++ b/gangskins.html
@@ -140,6 +140,46 @@
         </ol>
     </nav>
 
+    <!-- Gang req Modal -->
+    <div class="modal fade" id="makeDonation" tabindex="-1" role="dialog" aria-labelledby="makeDonationModalLabel"
+         aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <p style="font-size: large" class="modal-title" id="makeDonationModalLabel">Termini e condizioni</p>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true"><i style="color: white" class="fas fa-times"></i></span>
+                    </button>
+                </div>
+                <div class="modal-body" style="font-size: small">
+                    <p>Proseguendo ed effettuando la donazione accetti le seguenti condizioni</p>
+                    <ol>
+                        <li>La tua donazione è volontaria, pertanto la tua donazione è da considerarsi definitiva e non rimborsabile.</li>
+                        <li>Il tuo status donatore non verrà abilitato fintanto che il servizio di pagamento non avrà registrato la donazione (Talvolta può essere trattenuto da PayPal) </li>
+                        <li>Ogni donazione che effettuerai sarà per il bene della comunità e verrà utilizzata per il sostentamento delle spese ad essa legate.</li>
+                        <li>Se contestassi la donazione per motivazioni non imputabili all'Amministrazione il tuo Account di gioco verrà sospeso tramite ban fino al termine della disputa.</li>
+                        <li>Donare non ti esclude dal rispettare le regole del server, subirai le punizioni come tutti gli altri giocatori. Le regole verranno applicate alla stessa maniera per tutti i giocatori, per cui in caso venissi bannato non verranno elargiti rimborsi.</li>
+                        <li>Le donazioni ricorrenti sono addebitate in automatico sul tuo conto da PayPal è tua responsabilità decidere l'eventuale annullamento attraverso il tuo account prima che esso avvenga, non verranno concessi rimborsi.</li>
+                        <li>È premura del donatore farsi riconoscere tramite commento nella donazione o l'interazione con un Amministratore</li>
+                        <li>La donazione è cumulativa, non è una tantum</li>
+                    </ol>
+                    <p>Condizioni aggiuntive Skin Gang:</p>
+                    <ol>
+                        <li>I proventi di queste donazioni sono utilizzate per il mantenimento del server, quindi si appoggiano alle condizioni sopra citate</li>
+                        <li>I vestiti su cui realizzare le skin sono pochi e quindi soggetti a limitazioni, chiedi prima di donare se sono disponibili!</li>
+                        <li>In caso di modifica di skin già introdotte, la modifica viene fatta pagare 3€ per tutte le skin da modificare!</li>
+                        <li>L'introduzione delle skin sul server è soggetta a tempistiche relative alle patch, alla prima utile verranno introdotte</li>
+                    </ol>
+                    <p>Clicca ora su accetta per proseguire ed essere portato alla pagina donazioni</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" style="cursor: pointer;" class="btn btn-secondary" data-dismiss="modal">Annulla</button>
+                    <a type="button" href="https://www.alir.eu/donate/make-donation/" class="btn btn-primary">Accetto, continua</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"
