BIS approved page

--- a/donations.html
+++ b/donations.html
@@ -37,6 +37,10 @@
                        title="Informazioni sulle skin per le gang"> <i class="fas fa-male"></i> Skin Gang</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" style="cursor:pointer;" href="bisapproved.html" data-toggle="tooltip" data-placement="top"
+                       title="Donazioni approvate bohemia interactive"> <i class="fas fa-check-circle"></i> Donazioni approvate BIS</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="https://www.alir.eu/" data-toggle="tooltip" data-placement="top"
                        title="Torna al forum"> <i class="fas fa-external-link-alt"></i> Torna al forum</a>
                 </li>
