--- a/gangskins.html
+++ b/gangskins.html
@@ -34,8 +34,15 @@
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" style="cursor:pointer;" href="donations.html" data-toggle="tooltip" data-placement="top"
+                    <a class="nav-link" style="cursor:pointer;" href="donations.html" data-toggle="tooltip"
+                       data-placement="top"
                        title="Informazioni sulle donazioni"> <i class="fas fa-euro-sign"></i> Donazioni</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" style="cursor:pointer;" href="bisapproved.html" data-toggle="tooltip"
+                       data-placement="top"
+                       title="Donazioni approvate bohemia interactive"> <i class="fas fa-check-circle"></i> Donazioni
+                        approvate BIS</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="https://www.alir.eu/" data-toggle="tooltip" data-placement="top"
@@ -51,7 +58,9 @@
             <div class="col">
                 <div class="card">
                     <div class="card-body vehicle">
-                        <h3 class="price">5 €<small style="font-size: large">/mese</small></h3>
+                        <h3 class="price">5 €
+                            <small style="font-size: large">/mese</small>
+                        </h3>
                         <p class="name">Pack Veicolo</p>
                     </div>
                     <ul class="list-group list-group-flush centered features">
@@ -67,7 +76,9 @@
             <div class="col">
                 <div class="card">
                     <div class="card-body heli">
-                        <h3 class="price">5 €<small style="font-size: large">/mese</small></h3>
+                        <h3 class="price">5 €
+                            <small style="font-size: large">/mese</small>
+                        </h3>
                         <p class="name">Pack Elicottero</p>
                     </div>
                     <ul class="list-group list-group-flush centered features">
@@ -83,7 +94,9 @@
             <div class="col">
                 <div class="card">
                     <div class="card-body outfits">
-                        <h3 class="price">5 €<small style="font-size: large">/mese</small></h3>
+                        <h3 class="price">5 €
+                            <small style="font-size: large">/mese</small>
+                        </h3>
                         <p class="name">Pack Vestito</p>
                     </div>
                     <ul class="list-group list-group-flush centered features">
@@ -104,7 +117,13 @@
             <div class="col">
                 <div class="card">
                     <div class="card-body allpack">
-                        <h3 class="price"><del style="color: #BE3A32">15 €<small style="font-size: large">/mese</small></del> 12 €<small style="font-size: large">/mese</small></h3>
+                        <h3 class="price">
+                            <del style="color: #BE3A32">15 €
+                                <small style="font-size: large">/mese</small>
+                            </del>
+                            12 €
+                            <small style="font-size: large">/mese</small>
+                        </h3>
                         <p class="name">Tutti i pacchetti</p>
                     </div>
                     <ul class="list-group list-group-flush centered features">
@@ -127,8 +146,11 @@
             <li class="breadcrumb-item active" aria-current="page">
               <span>Made by <a
                       href="https://www.alir.eu/profile/3-andreacw/" data-toggle="tooltip" data-placement="top"
-                      title="Visualizza il profilo di Andreacw">Andreacw</a></span> - Under <a data-toggle="tooltip" data-placement="top"
-                                                                                               title="Visualizza la licenza su GitHub" href="https://github.com/andreacw5/ALIRDonations/blob/master/LICENSE">MIT</a> License - Made for <a
+                      title="Visualizza il profilo di Andreacw">Andreacw</a></span> - Under <a data-toggle="tooltip"
+                                                                                               data-placement="top"
+                                                                                               title="Visualizza la licenza su GitHub"
+                                                                                               href="https://github.com/andreacw5/ALIRDonations/blob/master/LICENSE">MIT</a>
+                License - Made for <a
                     href="https://www.alir.eu/"
                     data-toggle="tooltip"
                     data-placement="top"
@@ -154,31 +176,59 @@
                 <div class="modal-body" style="font-size: small">
                     <p>Proseguendo ed effettuando la donazione accetti le seguenti condizioni</p>
                     <ol>
-                        <li>La tua donazione è volontaria, pertanto la tua donazione è da considerarsi definitiva e non rimborsabile.</li>
-                        <li>Il tuo status donatore non verrà abilitato fintanto che il servizio di pagamento non avrà registrato la donazione (Talvolta può essere trattenuto da PayPal) </li>
-                        <li>Ogni donazione che effettuerai sarà per il bene della comunità e verrà utilizzata per il sostentamento delle spese ad essa legate.</li>
-                        <li>Se contestassi la donazione per motivazioni non imputabili all'Amministrazione il tuo Account di gioco verrà sospeso tramite ban fino al termine della disputa.</li>
-                        <li>Donare non ti esclude dal rispettare le regole del server, subirai le punizioni come tutti gli altri giocatori. Le regole verranno applicate alla stessa maniera per tutti i giocatori, per cui in caso venissi bannato non verranno elargiti rimborsi.</li>
-                        <li>Le donazioni ricorrenti sono addebitate in automatico sul tuo conto da PayPal è tua responsabilità decidere l'eventuale annullamento attraverso il tuo account prima che esso avvenga, non verranno concessi rimborsi.</li>
-                        <li>È premura del donatore farsi riconoscere tramite commento nella donazione o l'interazione con un Amministratore</li>
+                        <li>La tua donazione è volontaria, pertanto la tua donazione è da considerarsi definitiva e non
+                            rimborsabile.
+                        </li>
+                        <li>Il tuo status donatore non verrà abilitato fintanto che il servizio di pagamento non avrà
+                            registrato la donazione (Talvolta può essere trattenuto da PayPal)
+                        </li>
+                        <li>Ogni donazione che effettuerai sarà per il bene della comunità e verrà utilizzata per il
+                            sostentamento delle spese ad essa legate.
+                        </li>
+                        <li>Se contestassi la donazione per motivazioni non imputabili all'Amministrazione il tuo
+                            Account di gioco verrà sospeso tramite ban fino al termine della disputa.
+                        </li>
+                        <li>Donare non ti esclude dal rispettare le regole del server, subirai le punizioni come tutti
+                            gli altri giocatori. Le regole verranno applicate alla stessa maniera per tutti i giocatori,
+                            per cui in caso venissi bannato non verranno elargiti rimborsi.
+                        </li>
+                        <li>Le donazioni ricorrenti sono addebitate in automatico sul tuo conto da PayPal è tua
+                            responsabilità decidere l'eventuale annullamento attraverso il tuo account prima che esso
+                            avvenga, non verranno concessi rimborsi.
+                        </li>
+                        <li>È premura del donatore farsi riconoscere tramite commento nella donazione o l'interazione
+                            con un Amministratore
+                        </li>
                         <li>La donazione è cumulativa, non è una tantum</li>
                     </ol>
                     <p>Condizioni aggiuntive Skin Gang:</p>
                     <ol>
-                        <li>I proventi di queste donazioni sono utilizzate per il mantenimento del server, quindi si appoggiano alle condizioni sopra citate</li>
-                        <li>I vestiti su cui realizzare le skin sono pochi e quindi soggetti a limitazioni, chiedi prima di donare se sono disponibili!</li>
-                        <li>In caso di modifica di skin già introdotte, la modifica viene fatta pagare 3€ per tutte le skin da modificare!</li>
-                        <li>L'introduzione delle skin sul server è soggetta a tempistiche relative alle patch, alla prima utile verranno introdotte</li>
+                        <li>I proventi di queste donazioni sono utilizzate per il mantenimento del server, quindi si
+                            appoggiano alle condizioni sopra citate
+                        </li>
+                        <li>I vestiti su cui realizzare le skin sono pochi e quindi soggetti a limitazioni, chiedi prima
+                            di donare se sono disponibili!
+                        </li>
+                        <li>In caso di modifica di skin già introdotte, la modifica viene fatta pagare 3€ per tutte le
+                            skin da modificare!
+                        </li>
+                        <li>L'introduzione delle skin sul server è soggetta a tempistiche relative alle patch, alla
+                            prima utile verranno introdotte
+                        </li>
                     </ol>
                     <p>Clicca ora su accetta per proseguire ed essere portato alla pagina donazioni</p>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" style="cursor: pointer;" class="btn btn-secondary" data-dismiss="modal">Annulla</button>
-                    <a type="button" href="https://www.alir.eu/donate/make-donation/" class="btn btn-primary">Accetto, continua</a>
+                    <button type="button" style="cursor: pointer;" class="btn btn-secondary" data-dismiss="modal">
+                        Annulla
+                    </button>
+                    <a type="button" href="https://www.alir.eu/donate/make-donation/" class="btn btn-primary">Accetto,
+                        continua</a>
                 </div>
             </div>
         </div>
     </div>
+</div>
 
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
