--- a/donations/donations.html
+++ b/donations/donations.html
@@ -123,10 +123,10 @@
                                                                    class="fas fa-envelope"></i> - 750MB <i
                                 title="Spazio allegati ed immagini" class="fas fa-images"></i></li>
                         <li class="list-group-item">Firma nei post</li>
-                        <li class="list-group-item">Foto personalizzata sul documento in-game</li>
+                        <li class="list-group-item" style="color: #4c5156" title="Disponibile a breve!">Foto personalizzata sul documento in-game</li>
                         <li class="list-group-item">Skin in game <i title="Visualizza le skin sbloccate"
                                                                     class="fas fa-images"></i></li>
-                        <li class="list-group-item">Targa personalizzata <i class="fas fa-id-badge"></i></li>
+                        <li class="list-group-item" style="color: #4c5156" title="Disponibile a breve!">Targa personalizzata <i class="fas fa-id-badge"></i></li>
                         <li class="list-group-item">Stanza su Teamspeak</li>
                     </ul>
                     <div class="card-body centered">
@@ -154,7 +154,7 @@
                                                                     class="fas fa-images"></i></li>
                         <li class="list-group-item" title="Trofeo sul forum">Investitore <i class="fas fa-trophy"></i>
                         </li>
-                        <li class="list-group-item">Targa personalizzata <i class="fas fa-id-badge"></i></li>
+                        <li class="list-group-item" style="color: #4c5156" title="Disponibile a breve!">Targa personalizzata <i class="fas fa-id-badge"></i></li>
                         <li class="list-group-item">Titolo personalizzato sul forum</li>
                         <li class="list-group-item">Stanza su Teamspeak</li>
                     </ul>
