--- a/blocks/social-block/content.html
+++ b/blocks/social-block/content.html
@@ -1,9 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Social plugins</title>
-</head>
 <style>
     .social-aliricons {
         margin: 0 auto;
@@ -65,24 +59,23 @@
     }
 
     .aliricon--facebook a {
-        background-color: #3b5998;
-        background-image: url("http://alir.eu/etero/social/facebook-128.png");
+        background-color: #2D3035;
+        background-image: url("https://alir.eu/etero/social/facebook.svg");
     }
 
     .aliricon--twitter a {
-        background-color: #1da1f2;
-        background-image: url("http://alir.eu/etero/social/twitter-128.png");
+        background-color: #2D3035;
+        background-image: url("https://alir.eu/etero/social/twitter.svg");
     }
     .aliricon--telegram a {
-        background-color: #0088cc;
-        background-image: url("https://www.alir.eu/etero/social/Telegram.png");
+        background-color: #2D3035;
+        background-image: url("https://www.alir.eu/etero/social/telegram.svg");
     }
     .aliricon--youtube a {
-        background-color: #ff0000;
-        background-image: url("https://www.alir.eu/etero/social/Dakirby309-Simply-Styled-YouTube.ico");
+        background-color: #2D3035;
+        background-image: url("https://www.alir.eu/etero/social/youtube.svg");
     }
 </style>
-<body style="background-color: #212327">
 <div class="ipsPad ipsWidget_inner">
     <div id="socialDiv" style="min-height: 72px; width: 100%;">
         <span class="social-aliricons">
@@ -109,5 +102,3 @@
     </span>
     </div>
 </div>
-</body>
-</html>
