--- a/pages/homepage/main.html
+++ b/pages/homepage/main.html
@@ -123,15 +123,15 @@
         <!-- Example row of columns -->
         <div class="row">
             <div class="col-md-3">
-                <a href="#" class="btn btn-secondary btn-lg btn-block" role="button" aria-pressed="true"><i
+                <a href="#" class="btn btn-outline-light btn-lg btn-block" role="button" aria-pressed="true"><i
                         class="fas fa-comments"></i> Forum</a>
             </div>
             <div class="col-md-3">
-                <a href="#" class="btn btn-secondary btn-lg btn-block" role="button" aria-pressed="true"><i
+                <a href="#" class="btn btn-outline-light btn-lg btn-block" role="button" aria-pressed="true"><i
                         class="fas fa-book "></i> Regolamento</a>
             </div>
             <div class="col-md-3">
-                <a href="#" class="btn btn-secondary btn-lg btn-block" role="button" aria-pressed="true"><i
+                <a href="#" class="btn btn-outline-light btn-lg btn-block" role="button" aria-pressed="true"><i
                         class="fas fa-compass"></i> Guida</a>
             </div>
             <div class="col-md-3">
@@ -169,25 +169,25 @@
             <!-- Example row of columns -->
             <div class="row">
                 <div class="col-md-4">
-                    <h2>Heading</h2>
+                    <h2 class="worksans">HEADING</h2>
                     <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor
                         mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada
                         magna mollis euismod. Donec sed odio dui. </p>
-                    <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+                    <p><a class="btn btn-outline-light" href="#" role="button">View details &raquo;</a></p>
                 </div>
                 <div class="col-md-4">
-                    <h2>Heading</h2>
+                    <h2 class="worksans">HEADING</h2>
                     <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor
                         mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada
                         magna mollis euismod. Donec sed odio dui. </p>
-                    <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+                    <p><a class="btn btn-outline-light" href="#" role="button">View details &raquo;</a></p>
                 </div>
                 <div class="col-md-4">
-                    <h2>Heading</h2>
+                    <h2 class="worksans">HEADING</h2>
                     <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id
                         ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris
                         condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-                    <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+                    <p><a class="btn btn-outline-light" href="#" role="button">View details &raquo;</a></p>
                 </div>
             </div>
 
@@ -197,7 +197,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h2>Ultimi post</h2>
+                        <h2 class="worksans">post recenti</h2>
                     </div>
                 </div>
                 <!-- Example row of columns -->
@@ -207,13 +207,13 @@
                             <div class="card-body d-flex flex-column align-items-start">
                                 <strong class="d-inline-block mb-2 text-primary">World</strong>
                                 <h3 class="mb-0">
-                                    <a class="text-dark" href="#">Featured post</a>
+                                    <a href="#" class="wstitle">Featured post</a>
                                 </h3>
                                 <div class="mb-1 text-muted">Nov 12</div>
                                 <p class="card-text mb-auto">This is a wider card with supporting text below as a
                                     natural
                                     lead-in to additional content.</p>
-                                <a href="#">Continue reading</a>
+                                <a href="#">Continua a leggere...   <i class="fas fa-external-link-alt"></i></a>
                             </div>
                             <img class="card-img-right flex-auto d-none d-md-block"
                                  data-src="holder.js/200x250?theme=thumb"
@@ -227,13 +227,13 @@
                             <div class="card-body d-flex flex-column align-items-start">
                                 <strong class="d-inline-block mb-2 text-success">Design</strong>
                                 <h3 class="mb-0">
-                                    <a class="text-dark" href="#">Post title</a>
+                                    <a href="#" class="wstitle">Featured post</a>
                                 </h3>
                                 <div class="mb-1 text-muted">Nov 11</div>
                                 <p class="card-text mb-auto">This is a wider card with supporting text below as a
                                     natural
                                     lead-in to additional content.</p>
-                                <a href="#">Continue reading</a>
+                                <a href="#">Continua a leggere...   <i class="fas fa-external-link-alt"></i></a>
                             </div>
                             <img class="card-img-right flex-auto d-none d-md-block"
                                  data-src="holder.js/200x250?theme=thumb"
@@ -249,13 +249,13 @@
                             <div class="card-body d-flex flex-column align-items-start">
                                 <strong class="d-inline-block mb-2 text-primary">World</strong>
                                 <h3 class="mb-0">
-                                    <a class="text-dark" href="#">Featured post</a>
+                                    <a href="#" class="wstitle">Featured post</a>
                                 </h3>
                                 <div class="mb-1 text-muted">Nov 12</div>
                                 <p class="card-text mb-auto">This is a wider card with supporting text below as a
                                     natural
                                     lead-in to additional content.</p>
-                                <a href="#">Continue reading</a>
+                                <a href="#">Continua a leggere...   <i class="fas fa-external-link-alt"></i></a>
                             </div>
                             <img class="card-img-right flex-auto d-none d-md-block"
                                  data-src="holder.js/200x250?theme=thumb"
@@ -269,13 +269,13 @@
                             <div class="card-body d-flex flex-column align-items-start">
                                 <strong class="d-inline-block mb-2 text-success">Design</strong>
                                 <h3 class="mb-0">
-                                    <a class="text-dark" href="#">Post title</a>
+                                    <a href="#" class="wstitle">Featured post</a>
                                 </h3>
                                 <div class="mb-1 text-muted">Nov 11</div>
                                 <p class="card-text mb-auto">This is a wider card with supporting text below as a
                                     natural
                                     lead-in to additional content.</p>
-                                <a href="#">Continue reading</a>
+                                <a href="#">Continua a leggere...   <i class="fas fa-external-link-alt"></i></a>
                             </div>
                             <img class="card-img-right flex-auto d-none d-md-block"
                                  data-src="holder.js/200x250?theme=thumb"
@@ -291,13 +291,13 @@
                             <div class="card-body d-flex flex-column align-items-start">
                                 <strong class="d-inline-block mb-2 text-primary">World</strong>
                                 <h3 class="mb-0">
-                                    <a class="text-dark" href="#">Featured post</a>
+                                    <a href="#" class="wstitle">Featured post</a>
                                 </h3>
                                 <div class="mb-1 text-muted">Nov 12</div>
                                 <p class="card-text mb-auto">This is a wider card with supporting text below as a
                                     natural
                                     lead-in to additional content.</p>
-                                <a href="#">Continue reading</a>
+                                <a href="#">Continua a leggere...   <i class="fas fa-external-link-alt"></i></a>
                             </div>
                             <img class="card-img-right flex-auto d-none d-md-block"
                                  data-src="holder.js/200x250?theme=thumb"
@@ -311,13 +311,13 @@
                             <div class="card-body d-flex flex-column align-items-start">
                                 <strong class="d-inline-block mb-2 text-success">Design</strong>
                                 <h3 class="mb-0">
-                                    <a class="text-dark" href="#">Post title</a>
+                                    <a href="#" class="wstitle">Featured post</a>
                                 </h3>
                                 <div class="mb-1 text-muted">Nov 11</div>
                                 <p class="card-text mb-auto">This is a wider card with supporting text below as a
                                     natural
                                     lead-in to additional content.</p>
-                                <a href="#">Continue reading</a>
+                                <a href="#">Continua a leggere...   <i class="fas fa-external-link-alt"></i></a>
                             </div>
                             <img class="card-img-right flex-auto d-none d-md-block"
                                  data-src="holder.js/200x250?theme=thumb"
@@ -329,41 +329,41 @@
                 </div>
             </div>
         </div>
-        <a type="button" id="backtop" href="#top" class="btn btn-primary btn-lg btn-block">Block level button</a>
+        <a type="button" id="backtop" href="#top" class="btn  btn-outline-light btn-lg btn-block"><i class="fas fa-arrow-up "></i> Block level button</a>
         <hr>
     </div><!-- /.container -->
     <!-- FOOTER -->
     <footer class="container">
         <div class="row">
             <div class="col-6 col-md">
-                <h5>Features</h5>
+                <h5><i class="fas fa-link"></i> Link utili</h5>
                 <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="#">Cool stuff</a></li>
-                    <li><a class="text-muted" href="#">Random feature</a></li>
-                    <li><a class="text-muted" href="#">Team feature</a></li>
-                    <li><a class="text-muted" href="#">Stuff for developers</a></li>
-                    <li><a class="text-muted" href="#">Another one</a></li>
-                    <li><a class="text-muted" href="#">Last time</a></li>
+                    <li><a class="text-muted" href="#">Forum</a></li>
+                    <li><a class="text-muted" href="#">Regolamento</a></li>
+                    <li><a class="text-muted" href="#">Guida</a></li>
+                    <li><a class="text-muted" href="#">Annunci dello staff</a></li>
+                    <li><a class="text-muted" href="#">Sviluppo del server</a></li>
+                    <li><a class="text-muted" href="#">Segnala un bug!</a></li>
                 </ul>
             </div>
             <div class="col-6 col-md">
-                <h5>Features</h5>
+                <h5><i class="fas fa-clipboard"></i> Moduli</h5>
                 <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="#">Cool stuff</a></li>
-                    <li><a class="text-muted" href="#">Random feature</a></li>
-                    <li><a class="text-muted" href="#">Team feature</a></li>
-                    <li><a class="text-muted" href="#">Stuff for developers</a></li>
-                    <li><a class="text-muted" href="#">Another one</a></li>
-                    <li><a class="text-muted" href="#">Last time</a></li>
+                    <li><a class="text-muted" href="#">Richiesta di ban</a></li>
+                    <li><a class="text-muted" href="#">Richiesta di unban</a></li>
+                    <li><a class="text-muted" href="#">Richiesta di appello (6 Mesi)</a></li>
+                    <li><a class="text-muted" href="#">Richiesta di rimborso</a></li>
+                    <li><a class="text-muted" href="#">Richiesta di rimborso (Casa)</a></li>
+                    <li><a class="text-muted" href="#">Richiedi una base</a></li>
                 </ul>
             </div>
             <div class="col-6 col-md">
-                <h5>About</h5>
+                <h5><i class="fas fa-user-secret"></i> ALIR Team</h5>
                 <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="#">Team</a></li>
-                    <li><a class="text-muted" href="#">Locations</a></li>
-                    <li><a class="text-muted" href="#">Privacy</a></li>
-                    <li><a class="text-muted" href="#">Terms</a></li>
+                    <li><a class="text-muted" href="#">Lo staff</a></li>
+                    <li><a class="text-muted" href="#">Privacy policy</a></li>
+                    <li><a class="text-muted" href="#">Termini e condizioni</a></li>
+                    <li><a class="text-muted" href="#"></a></li>
                 </ul>
             </div>
             <div class="col-12 col-md">
