--- a/pages/homepage/main.html
+++ b/pages/homepage/main.html
@@ -136,28 +136,30 @@
             </div>
             <div class="col-md-3">
                 <div id="socialDiv" style="min-height: 72px; width: 100%;">
-        <span class="social-aliricons">
-            <span class="aliricon aliricon--facebook">
-            <a href="https://www.facebook.com/altislifeitaliareloaded/" title="Vai alla pagina Facebook" target="_blank">
-                <span class="aliricon__name">Facebook</span>
-            </a>
-        </span>
-        <span class="aliricon aliricon--twitter">
-            <a href="" title="Vai alla pagina di Twitter" target="_blank">
-                <span class="aliricon__name">Twitter</span>
-            </a>
-        </span>
-        <span class="aliricon aliricon--youtube">
-            <a href="https://www.youtube.com/channel/UCz8hNTiTR0dwFOCJ0rg8f5Q" title="Vai al canale YouTube" target="_blank">
-                <span class="aliricon__name">Youtube</span>
-            </a>
-        </span>
-        <span class="aliricon aliricon--telegram">
-            <a href="https://t.me/joinchat/FuhWXEHTodV1GkDcoI49Fg" title="Unisciti al gruppo Telegram" target="_blank">
-                <span class="aliricon__name">Telegram</span>
-            </a>
-        </span>
-    </span>
+                    <span class="social-aliricons">
+                        <span class="aliricon aliricon--facebook">
+                        <a href="https://www.facebook.com/altislifeitaliareloaded/" title="Vai alla pagina Facebook"
+                           target="_blank">
+                            <span class="aliricon-name">Facebook</span>
+                        </a>
+                        </span>
+                        <span class="aliricon aliricon--twitter">
+                            <a href="" title="Vai alla pagina di Twitter" target="_blank">
+                                <span class="aliricon-name">Twitter</span>
+                            </a>
+                        </span>
+                        <span class="aliricon aliricon--youtube">
+                            <a href="https://www.youtube.com/channel/UCz8hNTiTR0dwFOCJ0rg8f5Q" title="Vai al canale YouTube"
+                               target="_blank">
+                                <span class="aliricon-name">Youtube</span>
+                            </a>
+                        </span>
+                        <span class="aliricon aliricon--telegram">
+                            <a href="https://t.me/joinchat/FuhWXEHTodV1GkDcoI49Fg" title="Unisciti al gruppo Telegram" target="_blank">
+                                <span class="aliricon-name">Telegram</span>
+                            </a>
+                        </span>
+                    </span>
                 </div>
             </div>
         </div>
@@ -213,7 +215,7 @@
                                 <p class="card-text mb-auto">This is a wider card with supporting text below as a
                                     natural
                                     lead-in to additional content.</p>
-                                <a href="#">Continua a leggere...   <i class="fas fa-external-link-alt"></i></a>
+                                <a href="#">Continua a leggere... <i class="fas fa-external-link-alt"></i></a>
                             </div>
                             <img class="card-img-right flex-auto d-none d-md-block"
                                  data-src="holder.js/200x250?theme=thumb"
@@ -233,7 +235,7 @@
                                 <p class="card-text mb-auto">This is a wider card with supporting text below as a
                                     natural
                                     lead-in to additional content.</p>
-                                <a href="#">Continua a leggere...   <i class="fas fa-external-link-alt"></i></a>
+                                <a href="#">Continua a leggere... <i class="fas fa-external-link-alt"></i></a>
                             </div>
                             <img class="card-img-right flex-auto d-none d-md-block"
                                  data-src="holder.js/200x250?theme=thumb"
@@ -255,7 +257,7 @@
                                 <p class="card-text mb-auto">This is a wider card with supporting text below as a
                                     natural
                                     lead-in to additional content.</p>
-                                <a href="#">Continua a leggere...   <i class="fas fa-external-link-alt"></i></a>
+                                <a href="#">Continua a leggere... <i class="fas fa-external-link-alt"></i></a>
                             </div>
                             <img class="card-img-right flex-auto d-none d-md-block"
                                  data-src="holder.js/200x250?theme=thumb"
@@ -275,7 +277,7 @@
                                 <p class="card-text mb-auto">This is a wider card with supporting text below as a
                                     natural
                                     lead-in to additional content.</p>
-                                <a href="#">Continua a leggere...   <i class="fas fa-external-link-alt"></i></a>
+                                <a href="#">Continua a leggere... <i class="fas fa-external-link-alt"></i></a>
                             </div>
                             <img class="card-img-right flex-auto d-none d-md-block"
                                  data-src="holder.js/200x250?theme=thumb"
@@ -297,7 +299,7 @@
                                 <p class="card-text mb-auto">This is a wider card with supporting text below as a
                                     natural
                                     lead-in to additional content.</p>
-                                <a href="#">Continua a leggere...   <i class="fas fa-external-link-alt"></i></a>
+                                <a href="#">Continua a leggere... <i class="fas fa-external-link-alt"></i></a>
                             </div>
                             <img class="card-img-right flex-auto d-none d-md-block"
                                  data-src="holder.js/200x250?theme=thumb"
@@ -317,7 +319,7 @@
                                 <p class="card-text mb-auto">This is a wider card with supporting text below as a
                                     natural
                                     lead-in to additional content.</p>
-                                <a href="#">Continua a leggere...   <i class="fas fa-external-link-alt"></i></a>
+                                <a href="#">Continua a leggere... <i class="fas fa-external-link-alt"></i></a>
                             </div>
                             <img class="card-img-right flex-auto d-none d-md-block"
                                  data-src="holder.js/200x250?theme=thumb"
@@ -329,7 +331,8 @@
                 </div>
             </div>
         </div>
-        <a type="button" id="backtop" href="#top" class="btn  btn-outline-light btn-lg btn-block"><i class="fas fa-arrow-up "></i> Block level button</a>
+        <a type="button" id="backtop" href="#top" class="btn  btn-outline-light btn-lg btn-block"><i
+                class="fas fa-arrow-up "></i> Block level button</a>
         <hr>
     </div><!-- /.container -->
     <!-- FOOTER -->
