--- a/pages/homepage/main.html
+++ b/pages/homepage/main.html
@@ -137,24 +137,24 @@
             <div class="col-md-3">
                 <div id="socialDiv" style="min-height: 72px; width: 100%;">
                     <span class="social-aliricons">
-                        <span class="aliricon aliricon--facebook">
+                        <span class="aliricon aliricon-facebook">
                         <a href="https://www.facebook.com/altislifeitaliareloaded/" title="Vai alla pagina Facebook"
                            target="_blank">
                             <span class="aliricon-name">Facebook</span>
                         </a>
                         </span>
-                        <span class="aliricon aliricon--twitter">
+                        <span class="aliricon aliricon-twitter">
                             <a href="" title="Vai alla pagina di Twitter" target="_blank">
                                 <span class="aliricon-name">Twitter</span>
                             </a>
                         </span>
-                        <span class="aliricon aliricon--youtube">
+                        <span class="aliricon aliricon-youtube">
                             <a href="https://www.youtube.com/channel/UCz8hNTiTR0dwFOCJ0rg8f5Q" title="Vai al canale YouTube"
                                target="_blank">
                                 <span class="aliricon-name">Youtube</span>
                             </a>
                         </span>
-                        <span class="aliricon aliricon--telegram">
+                        <span class="aliricon aliricon-telegram">
                             <a href="https://t.me/joinchat/FuhWXEHTodV1GkDcoI49Fg" title="Unisciti al gruppo Telegram" target="_blank">
                                 <span class="aliricon-name">Telegram</span>
                             </a>
