--- a/pages/homepage/main.html
+++ b/pages/homepage/main.html
@@ -19,8 +19,8 @@
 </head>
 <body>
 <header id="top">
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="#">PRODUCT LOGO</a>
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark" >
+        <a class="navbar-brand" href="#" style="margin-left: 5%">PRODUCT LOGO</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -37,7 +37,7 @@
                     <a class="nav-link disabled" href="#">Disabled</a>
                 </li>
             </ul>-->
-            <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">
+            <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex " style="margin-right: 7%">
                 <li class="nav-item active">
                     <a class="nav-link" href="#">LINK</a>
                 </li>
@@ -200,11 +200,11 @@
                     <p><a class="btn btn-outline-light" href="#" role="button">Continua &raquo;</a></p>
                 </div>
                 <div class="col-md-4">
-                    <div class="card flex-md-row mb-4 box-shadow h-md-250">
+                    <div class="card flex-md-row mb-4 box-shadow h-md-250" id="alirserver" data-toggle="modal" data-target="#serverDataModal">
                         <div class="row">
                             <div class="col-md-3">
                                 <div class="card-body d-flex flex-column align-items-start">
-                                    <span style="text-align: center" data-toggle="modal" data-target="#serverDataModal"><i
+                                    <span style="text-align: center"><i id="alirservericon"
                                             class="fas fa-server fa-4x"></i></span>
                                 </div>
                             </div>
@@ -214,24 +214,23 @@
                                     <p class="card-text" style="margin-bottom: 0"><i class="fas fa-users"></i> <span
                                             class="aliruser"></span>/<span class="alirmaxuser"></span></p>
                                     <div class="text-muted" style="font-size: smaller">IP: <span
-                                            class="aliraddress"></span> Porta: <span class="alirport"></span></div>
+                                            class="aliraddress"></span>:<span class="alirport"></span></div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="card flex-md-row mb-4 box-shadow h-md-250">
+                    <div class="card flex-md-row mb-4 box-shadow h-md-250" id="tsserver">
                         <div class="row">
                             <div class="col-md-3">
                                 <div class="card-body d-flex flex-column align-items-start">
-                                    <span style="text-align: center"><i class="fas fa-server fa-4x"></i></span>
+                                    <span style="text-align: center"><i style="color: green" class="fas fa-server fa-4x"></i></span>
                                 </div>
                             </div>
                             <div class="col-md-9">
                                 <div class="card-body align-items-start">
-                                    <strong class="d-inline-block">Server</strong>
-                                    <p class="card-text" style="margin-bottom: 0">1/10</p>
-                                    <div class="text-muted" style="font-size: smaller">IP: 145.239.149.40 Porta: 2302
-                                    </div>
+                                    <strong class="d-inline-block">Teamspeak</strong>
+                                    <p class="card-text" style="margin-bottom: 0"><i class="fas fa-users"></i> 69/256</p>
+                                    <div class="text-muted" style="font-size: smaller">IP: TS.ALIR.EU</div>
                                 </div>
                             </div>
                         </div>
@@ -440,17 +439,24 @@
             </div>
             <div class="modal-body">
                 <h3 id="alirservernamne"></h3>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Indirizzo: <span class="aliradress"></span></li>
-                    <li class="list-group-item">Porta: <span class="alirport"></span></li>
-                    <li class="list-group-item">Slot: <span class="aliruser"></span>/<span class="alirmaxuser"></span></li>
-                    <li class="list-group-item">Ultimo controllo: <span id="alirlastcheck"></span></li>
-                    <li class="list-group-item">Vestibulum at eros</li>
-                    <li class="list-group-item">Cras justo odio</li>
-                    <li class="list-group-item">Dapibus ac facilisis in</li>
-                    <li class="list-group-item">Morbi leo risus</li>
-                    <li class="list-group-item">Porta ac consectetur ac</li>
-                </ul>
+                <div class="row">
+                    <div class="col-md-6">
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">Indirizzo: <span class="aliraddress"></span>:<span class="alirport"></span></li>
+                            <li class="list-group-item">Slot: <span class="aliruser"></span>/<span class="alirmaxuser"></span></li>
+                            <li class="list-group-item">Mappa: <span id="alirmap"></span></li>
+                            <li class="list-group-item">Ultimo controllo: <small id="alirlastcheck"></small></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-6">
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">Uptime: <span id="appendUptime"></span></li>
+                            <li class="list-group-item">Rank server: <span id="alirrank"></span></li>
+                            <li class="list-group-item"></li>
+                            <li class="list-group-item"></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
